@@ -34,7 +34,7 @@ view the lastest version at
 </p>
 <p>
 See also the
-<a href="/admin/doc/models/#electionaudit">local documentation</a>
+<a href="/admin/doc/models/#electionaudits">local documentation</a>
 by logging in with the admin account and password
 that you established when you initialized this django site.
 </p>
